--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "sequelize": "^6.6.2"
   },
   "devDependencies": {
+    "eslint": "^7.26.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.23.2",
     "nodemon": "^2.0.7",
+    "prettier": "^2.3.0",
     "sequelize-cli": "^6.2.0",
     "sucrase": "^3.18.1"
   }
